--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -35,3 +35,9 @@ admin:
 
 owner:
   token: ${OWNER_TOKEN}
+
+kakao:
+  client:
+    id: ${KAKAO_CLIENT_ID}
+    secret: ${KAKAO_CLIENT_SECRET}
+    redirect: ${KAKAO_REDIRECT_URL}
