--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
     //aws s3
-    implementation 'software.amazon.awssdk:s3:2.20.0'
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.767'
 
     // ParameterObject
     implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
