fix: 테스트 코드 수정

--- a/module-batch/src/main/resources/application.properties
+++ b/module-batch/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.batch.job.enabled=false
 spring.batch.jdbc.initialize-schema=always
 spring.batch.jdbc.schema=classpath:org/springframework/batch/core/schema-mysql.sql
 spring.datasource-meta.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource-meta.jdbc-url=jdbc:mysql://localhost:3306/meta_db
-spring.datasource-meta.username=root
-spring.datasource-meta.password=1234
+spring.datasource-meta.jdbc-url=${META_DB_URL}
+spring.datasource-meta.username=${LOCAL_DB_USERNAME}
+spring.datasource-meta.password=${LOCAL_DB_PASSWORD}
 spring.datasource-data.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource-data.jdbc-url=jdbc:mysql://localhost:3306/fitnus
-spring.datasource-data.username=root
-spring.datasource-data.password=1234
+spring.datasource-data.jdbc-url=${LOCAL_DB_URL}
+spring.datasource-data.username=${LOCAL_DB_USERNAME}
+spring.datasource-data.password=${LOCAL_DB_PASSWORD}
