--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,40 @@ jobs:
           docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           
-      
-          
+
+  deploy:
+    name: Deploy to EC2
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Execute remote SSH commands on EC2
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          port: 22
+          script: |
+            REGION="ap-northeast-2"
+            ECR_REPOSITORY="fitnus-ecr"
+            IMAGE_TAG="latest"
+            AWS_ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }}
+            
+            # Docker 컨테이너 중지 및 삭제 (기존 컨테이너가 있다면)
+            docker stop fitnus || true
+            docker rm fitnus || true
+            
+            # ECR에서 최신 이미지 가져오기
+            aws ecr get-login-password --region $REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com
+            docker pull $AWS_ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
+            
+            # 새 컨테이너 실행
+            docker run -d --name fitnus -p 80:8080 \
+              -e SPRING_PROFILES_ACTIVE=prod \
+              -e JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} \
+              -e S3_ACCESS_KEY=${{ secrets.S3_ACCESS_KEY }} \
+              -e S3_SECRET_KEY=${{ secrets.S3_SECRET_KEY }} \
+              -e REDIS_HOST=${{ secrets.REDIS_HOST }} \
+              $AWS_ACCOUNT_ID.dkr.ecr.$REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG \    
 
