feat: 정산 기능 구현
동기식 정산 기능 구현

--- a/module-batch/build.gradle
+++ b/module-batch/build.gradle
@@ -11,7 +11,7 @@ dependencies {
 }
 
 tasks.named('bootJar') {
-    enabled = true
+    enabled = true // 나중에 false로 안바꾸면 대머리
 }
 
 tasks.named('jar') {
