--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,15 +38,15 @@ jobs:
 
       - name: Build, tag, and push image to ECR
         env:
-          ECR_REGISTRY: ${{ steps.ecr-login.outputs.registry}}
+          ECR_REGISTRY: ${{steps.ecr-login.outputs.registry}}
           ECR_REPOSITORY: fitnus
           IMAGE_TAG: latest
         run: |
           REGION="us-east-1"
           
-          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker build -t fitnus .
+          docker tag fitnus:latest 953923565421.dkr.ecr.us-east-1.amazonaws.com/fitnus:latest
+          docker push 953923565421.dkr.ecr.us-east-1.amazonaws.com/fitnus:latest
           
 
   deploy:
@@ -63,8 +63,8 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
           script: |
-            REGION="ap-northeast-2"
-            ECR_REPOSITORY="fitnus-ecr"
+            REGION="us-east-1"
+            ECR_REPOSITORY="fitnus"
             IMAGE_TAG="latest"
             AWS_ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }}
             
@@ -73,15 +73,15 @@ jobs:
             docker rm fitnus || true
             
             # ECR에서 최신 이미지 가져오기
-            aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+            aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 953923565421.dkr.ecr.us-east-1.amazonaws.com
             docker pull 953923565421.dkr.ecr.us-east-1.amazonaws.com/fitnus:latest
             
             # 새 컨테이너 실행
             docker run -d --name fitnus -p 80:8080 \
-              -e SPRING_PROFILES_ACTIVE=prod \
+              -e SPRING_PROFILES_ACTIVE=local \
               -e JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} \
               -e S3_ACCESS_KEY=${{ secrets.S3_ACCESS_KEY }} \
               -e S3_SECRET_KEY=${{ secrets.S3_SECRET_KEY }} \
               -e REDIS_HOST=${{ secrets.REDIS_HOST }} \
-              $953923565421.dkr.ecr.us-east-1.amazonaws.com/fitnus    
+              $953923565421.dkr.ecr.us-east-1.amazonaws.com/fitnus:latest
 
