--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,5 +83,5 @@ jobs:
               -e S3_ACCESS_KEY=${{ secrets.S3_ACCESS_KEY }} \
               -e S3_SECRET_KEY=${{ secrets.S3_SECRET_KEY }} \
               -e REDIS_HOST=${{ secrets.REDIS_HOST }} \
-              $953923565421.dkr.ecr.us-east-1.amazonaws.com/fitnus:latest
+              953923565421.dkr.ecr.us-east-1.amazonaws.com/fitnus:latest
 
