--- a/module-common/src/main/resources/application-local.yml
+++ b/module-common/src/main/resources/application-local.yml
@@ -41,3 +41,5 @@ kakao:
     id: ${KAKAO_CLIENT_ID}
     secret: ${KAKAO_CLIENT_SECRET}
     redirect: ${KAKAO_REDIRECT_URL}
+  api:
+    key: ${KAKAO_REST_API_KEY}
