--- a/.github/workflows/deploy-batch.yml
+++ b/.github/workflows/deploy-batch.yml
@@ -1,4 +1,4 @@
-name: FitNus CI
+name: Deploy Module-batch
 
 on:
   push:
@@ -7,54 +7,18 @@ on:
     branches: [ "dev" ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-      - name: gradlew 실행권한 부여
-        run: chmod +x ./gradlew
-
-      - name: Build JAR
-        run: ./gradlew build
-
-      - name: AWS 자격 증명
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
-          aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-          aws-region: us-east-1
-
-      - name: ECR에 로그인
-        id: ecr-login
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Build, tag, and push image to ECR
-        env:
-          ECR_REGISTRY: ${{steps.ecr-login.outputs.registry}}
-          ECR_REPOSITORY: fitnus
-          IMAGE_TAG: latest
-        run: |
-          REGION="us-east-1"
-          
-          docker build -t fitnus .
-          docker tag fitnus:latest 953923565421.dkr.ecr.us-east-1.amazonaws.com/fitnus:latest
-          docker push 953923565421.dkr.ecr.us-east-1.amazonaws.com/fitnus:latest
-          
 
   deploy:
     name: Deploy to EC2
     runs-on: ubuntu-latest
-    needs: build
+    needs: [ci]
 
     steps:
+      - name: Download Build Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: build-artifacts #업로드시 사용한 아티팩트 이름과 동일해야함
+
       - name: Execute remote SSH commands on EC2
         uses: appleboy/ssh-action@v0.1.6
         with:
