--- a/module-common/src/main/resources/application-local.yml
+++ b/module-common/src/main/resources/application-local.yml
@@ -41,3 +41,9 @@ kakao:
     id: ${KAKAO_CLIENT_ID}
     secret: ${KAKAO_CLIENT_SECRET}
     redirect: ${KAKAO_REDIRECT_URL}
+
+kakaopay:
+  secret: ${KAKAOPAY_SECRET}
+
+
+
