refactor: 정산 기능 스케쥴러 적용

--- a/module-batch/src/main/resources/application.properties
+++ b/module-batch/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=module-batch
+server.port=8085
 spring.batch.job.enabled=false
 spring.batch.jdbc.initialize-schema=always
 spring.batch.jdbc.schema=classpath:org/springframework/batch/core/schema-mysql.sql
