--- a/module-batch/build.gradle
+++ b/module-batch/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     api project(':module-common')
 
     implementation 'org.springframework.boot:spring-boot-starter-batch'
+    implementation 'org.springframework.batch:spring-batch-integration:5.0.2'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     testImplementation 'org.springframework.batch:spring-batch-test'
 }
