--- a/module-batch/build.gradle
+++ b/module-batch/build.gradle
@@ -18,3 +18,16 @@ tasks.named('bootJar') {
 tasks.named('jar') {
     enabled = true
 }
+
+//String jarName = "module-batch.jar"
+//
+//tasks.named("bootJar") {
+//    bootJar.getArchiveFileName().set(jarName)
+//
+//    bootJar.doLast(task -> {
+//        copy(copySpec -> {
+//            copySpec.from("build/libs/" + jarName)
+//            copySpec.into("../build/libs")
+//        })
+//    })
+//}
