--- a/.github/workflows/deploy-common.yml
+++ b/.github/workflows/deploy-common.yml
@@ -1,10 +1,20 @@
 name: Deploy Module-common
 
 on:
-  push:
-    branches: [ "dev" ]
-  pull_request:
-    branches: [ "dev" ]
+  workflow_run:
+    workflows: [ "FitNus CI" ]
+    types:
+      - completed
+    push:
+      paths:
+        - 'module-batch/**'
+      branch:
+        - dev
+    pull_request:
+      paths:
+        - 'module-batch/**'
+      branches:
+        - dev
 
 jobs:
   deploy:
