--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build JAR
-        run: ./gradlew build
+        run: ./gradlew build -x test
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
