--- a/module-common/build.gradle
+++ b/module-common/build.gradle
@@ -56,16 +56,16 @@ tasks.named('jar') {
 tasks.named('test') {
     useJUnitPlatform()
 }
-//
-//String jarName = "module-common.jar"
-//
-//tasks.named("bootJar") {
-//    bootJar.getArchiveFileName().set(jarName)
-//
-//    bootJar.doLast(task -> {
-//        copy(copySpec -> {
-//            copySpec.from("build/libs/" + jarName)
-//            copySpec.into("../build/libs")
-//        })
-//    })
-//}
+
+String jarName = "module-common.jar"
+
+tasks.named("bootJar") {
+    bootJar.getArchiveFileName().set(jarName)
+
+    bootJar.doLast(task -> {
+        copy(copySpec -> {
+            copySpec.from("build/libs/" + jarName)
+            copySpec.into("../build/libs")
+        })
+    })
+}
