--- a/.github/workflows/deploy-batch.yml
+++ b/.github/workflows/deploy-batch.yml
@@ -51,9 +51,9 @@ jobs:
             # 새 컨테이너 실행
             docker run -d --name fitnus -p 80:8080 \
               -e SPRING_PROFILES_ACTIVE=local \
-#              -e JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} \
-#              -e S3_ACCESS_KEY=${{ secrets.S3_ACCESS_KEY }} \
-#              -e S3_SECRET_KEY=${{ secrets.S3_SECRET_KEY }} \
-#              -e REDIS_HOST=${{ secrets.REDIS_HOST }} \
+              -e JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }} \
+              -e S3_ACCESS_KEY=${{ secrets.S3_ACCESS_KEY }} \
+              -e S3_SECRET_KEY=${{ secrets.S3_SECRET_KEY }} \
+              -e REDIS_HOST=${{ secrets.REDIS_HOST }} \
               953923565421.dkr.ecr.us-east-1.amazonaws.com/fitnus:latest
 
