--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,18 @@ services:
     build:
       context: ./module-batch
       dockerfile: Dockerfile
-    image: fitnus/module-batch:latest
+    image: "${ECR_REGISTRY}/module-batch:latest"
     container_name: module-batch
     ports:
       - "8081:8080"  # 외부 포트 8081을 내부 8080 포트로 매핑
     environment:
       SPRING_PROFILES_ACTIVE: "batch"
-      JWT_SECRET_KEY: "${JWT_SECRET_KEY}"
-      S3_ACCESS_KEY: "${S3_ACCESS_KEY}"
-      S3_SECRET_KEY: "${S3_SECRET_KEY}"
-      REDIS_HOST: "${REDIS_HOST}"
+      ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
+      JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+      S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY }}
+      S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY }}
+      REDIS_HOST: ${{ secrets.REDIS_HOST }}
+
     networks:
       - fitnus-network  # 네트워크 설정 추가
 
@@ -22,16 +24,17 @@ services:
     build:
       context: ./module-common
       dockerfile: Dockerfile
-    image: fitnus/module-common:latest
+    image: "${ECR_REGISTRY}/module-common:latest"
     container_name: module-common
     ports:
       - "8082:8080"  # 외부 포트 8082를 내부 8080 포트로 매핑
     environment:
       SPRING_PROFILES_ACTIVE: "common"
-      JWT_SECRET_KEY: "${JWT_SECRET_KEY}"
-      S3_ACCESS_KEY: "${S3_ACCESS_KEY}"
-      S3_SECRET_KEY: "${S3_SECRET_KEY}"
-      REDIS_HOST: "${REDIS_HOST}"
+      ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
+      JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+      S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY }}
+      S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY }}
+      REDIS_HOST: ${{ secrets.REDIS_HOST }}
     networks:
       - fitnus-network  # 네트워크 설정 추가
 
