--- a/.github/workflows/deploy-common.yml
+++ b/.github/workflows/deploy-common.yml
@@ -37,6 +37,12 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
+      - name: Install docker-compose  # docker-compose 설치 단계 추가
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version  
+
       - name: ECR에 로그인
         id: ecr-login
         uses: aws-actions/amazon-ecr-login@v2
