--- a/.github/workflows/deploy-batch.yml
+++ b/.github/workflows/deploy-batch.yml
@@ -2,7 +2,7 @@ name: Deploy Module-batch
 
 on:
   workflow_run:
-    workflows: ["FitNus CI"]
+    workflows: ["Build and Test All Modules"]
     types:
       - completed
 
