--- a/.github/workflows/deploy-batch.yml
+++ b/.github/workflows/deploy-batch.yml
@@ -1,27 +1,49 @@
-name: Deploy Module-batch
+
+# .github/workflows/ci.yml
+
+name: Module-batch CI/CD
 
 on:
-  workflow_run:
-    workflows: [FitNus CI]
-    types:
-      - completed
+  push:
+    branches: [ "dev" ]
+  pull_request:
+    branches: [ "dev" ]
 
 jobs:
-  deploy:
-    name: Deploy to EC2
+  build:
+    name : Build and Test All Modules
     runs-on: ubuntu-latest
-    if: >
-      ${{ github.event.workflow_run.event == 'push' &&
-      github.event.workflow_run.conclusion == 'success' }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Download Build Artifacts
-        uses: actions/download-artifact@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          name: build-artifacts  # 업로드 시 사용한 아티팩트 이름과 동일해야 함
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: gradlew 실행권한 부여
+        run: chmod +x ./gradlew
+
+      - name: Build JAR
+        run: ./gradlew build -x test
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-artifacts
+          path: build/libs/*.jar
+
+
+  deploy:
+    name: Deploy to EC2
+    runs-on: ubuntu-latest
+    needs : build
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
       - name: AWS 자격 증명 설정
         uses: aws-actions/configure-aws-credentials@v1
