--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,9 @@ name: FitNus CI
 
 on:
   push:
-    branches: [ "dev" ]
+    branches: [ "feat_SUB_module_CICD" ]
   pull_request:
-    branches: [ "dev" ]
+    branches: [ "feat_SUB_module_CICD" ]
 
 jobs:
   build:
