feat : add build gradlew in (batch, common)

--- a/.github/workflows/deploy-common.yml
+++ b/.github/workflows/deploy-common.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Build JAR
         run: ./gradlew build -x test
 
+      - name: Build JAR in common
+        run: ./module-common/gradlew build -x test
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
         with:
