--- a/.github/workflows/deploy-batch.yml
+++ b/.github/workflows/deploy-batch.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Build JAR
         run: ./gradlew build -x test
 
+      - name: Build JAR in batch
+        run: ./module-batch/gradlew build -x test
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
         with:
