feat : add woring-directory for 'docker build', 'docker push'

--- a/.github/workflows/deploy-common.yml
+++ b/.github/workflows/deploy-common.yml
@@ -64,6 +64,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build, tag, and push image to ECR
+        working-directory: ./module-common
         env:
           ECR_REGISTRY: ${{ steps.ecr-login.outputs.registry }}
           AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
