--- a/.github/workflows/deploy-batch.yml
+++ b/.github/workflows/deploy-batch.yml
@@ -65,6 +65,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build, tag, and push image to ECR
+        working-directory: ./module-batch
         env:
           ECR_REGISTRY: ${{ steps.ecr-login.outputs.registry }}
           AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
