--- a/.github/workflows/deploy-batch.yml
+++ b/.github/workflows/deploy-batch.yml
@@ -30,7 +30,7 @@ jobs:
         run: ./gradlew build -x test
 
       - name: Build JAR in batch
-        run: ./module-batch/gradlew build -x test
+        run: ./gradlew :module-batch:build -x test
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3
