--- a/module-batch/Dockerfile
+++ b/module-batch/Dockerfile
@@ -1,11 +1,13 @@
-#!/bin/bash
+# 1단계: Gradle 빌드 이미지 설정
+FROM gradle:7.3.3-jdk17 AS builder
+WORKDIR /app
+COPY . .
+RUN ./gradlew build -x test
 
-# base 이미지 설정
+# 2단계: 최종 실행 이미지 생성
 FROM openjdk:17-jdk-slim
-
-# jar 파일을 컨테이너 내부에 복사
-COPY /Users/ihyeonjung/Desktop/Sparta/FitNus/FitNus/module-batch/build/libs/*.jar batch.jar
-
+WORKDIR /app
+COPY --from=builder /app/build/libs/*.jar batch.jar
 
 # 실행 명령어
 CMD ["java", "-jar", "batch.jar"]
