--- a/module-common/Dockerfile
+++ b/module-common/Dockerfile
@@ -1,11 +1,26 @@
 #!/bin/bash
-
-# base 이미지 설정
 FROM openjdk:17-jdk-slim
 
-# jar 파일을 컨테이너 내부에 복사
-COPY /Users/ihyeonjung/Desktop/Sparta/FitNus/FitNus/module-common/build/libs/*.jar common.jar
+# 컨테이너 내의 작업 디렉토리 설정
+WORKDIR /app
 
+# 빌드된 JAR 파일을 컨테이너 내부의 작업 디렉토리로 복사
+COPY build/libs/*.jar common.jar
+
+# JAR 파일 실행
+CMD ["java", "-jar", "common.jar"]
+
+
+# 1단계: Gradle 빌드 이미지 설정
+FROM gradle:7.3.3-jdk17 AS builder
+WORKDIR /app
+COPY . .
+RUN ./gradlew build -x test
+
+# 2단계: 최종 실행 이미지 생성
+FROM openjdk:17-jdk-slim
+WORKDIR /app
+COPY --from=builder /app/build/libs/*.jar batch.jar
 
 # 실행 명령어
-CMD ["java", "-jar", "common.jar"]
+CMD ["java", "-jar", "batch.jar"]
