--- a/module-batch/Dockerfile
+++ b/module-batch/Dockerfile
@@ -1,13 +1,13 @@
 # 1단계: Gradle 빌드 이미지 설정
-FROM gradle:7.3.3-jdk17 AS builder
+FROM gradle:7.6.0-jdk17 AS build
 WORKDIR /app
-COPY . .
-RUN ./gradlew :module-batch:build -x test
+COPY .. .
+RUN gradle :module-batch:bootJar --no-daemon
 
 # 2단계: 최종 실행 이미지 생성
-FROM openjdk:17-jdk-slim
+FROM eclipse-temurin:17-jdk-jammy
 WORKDIR /app
-COPY --from=builder /app/build/libs/*.jar batch.jar
+COPY --from=build /app/build/libs/module-batch-*.jar batch.jar
 
 # 실행 명령어
 CMD ["java", "-jar", "batch.jar"]
