--- a/module-batch/build.gradle
+++ b/module-batch/build.gradle
@@ -16,18 +16,7 @@ tasks.named('bootJar') {
 }
 
 tasks.named('jar') {
-    enabled = true
+    enabled = false
 }
 
 String jarName = "module-batch.jar"
-
-tasks.named("bootJar") {
-    bootJar.getArchiveFileName().set(jarName)
-
-    bootJar.doLast(task -> {
-        copy(copySpec -> {
-            copySpec.from("build/libs/" + jarName)
-            copySpec.into("../build/libs")
-        })
-    })
-}
