--- a/module-common/build.gradle
+++ b/module-common/build.gradle
@@ -46,7 +46,7 @@ tasks.named('bootJar') {
 }
 
 tasks.named('jar') {
-    enabled = true
+    enabled = false
 }
 
 tasks.named('test') {
@@ -55,13 +55,3 @@ tasks.named('test') {
 
 String jarName = "module-common.jar"
 
-tasks.named("bootJar") {
-    bootJar.getArchiveFileName().set(jarName)
-
-    bootJar.doLast(task -> {
-        copy(copySpec -> {
-            copySpec.from("build/libs/" + jarName)
-            copySpec.into("../build/libs")
-        })
-    })
-}
