--- a/module-common/Dockerfile
+++ b/module-common/Dockerfile
@@ -9,5 +9,8 @@ FROM eclipse-temurin:17-jdk-jammy
 WORKDIR /app
 COPY --from=build /app/module-common/build/libs/module-common-*.jar common.jar
 
+# 복사된 .jar 파일이 있는지 확인
+RUN echo "Listing files in /app:" && ls -l /app && echo "Checking if common.jar exists:" && [ -f common.jar ]
+
 # 실행 명령어
 ENTRYPOINT ["java", "-jar", "common.jar"]
