--- a/module-common/src/main/resources/application-local.yml
+++ b/module-common/src/main/resources/application-local.yml
@@ -7,39 +7,16 @@ spring:
     password: ${LOCAL_DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-  servlet:
-    multipart:
-      enabled: true
-      max-file-size: 5MB
-      max-request-size: 5MB
-
-  jpa:
-    hibernate:
-      ddl-auto: update
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQLDialect
-        show_sql: true
-        format_sql: true
-        use_sql_comments: true
-
----
-spring:
   data:
     redis:
       host: localhost
       port: 6379
 
-admin:
-  token: ${ADMIN_TOKEN}
+  jpa:
+    hibernate:
+      ddl-auto: update  # 로컬 환경에서만 테이블 구조 자동 업데이트
+    show_sql: true
+    format_sql: true
 
-owner:
-  token: ${OWNER_TOKEN}
-
-kakao:
-  client:
-    id: ${KAKAO_CLIENT_ID}
-    secret: ${KAKAO_CLIENT_SECRET}
-    redirect: ${KAKAO_REDIRECT_URL}
-  api:
-    key: ${KAKAO_REST_API_KEY}
+server:
+  port: 8082
