fix : dockerfile build path

--- a/module-common/Dockerfile
+++ b/module-common/Dockerfile
@@ -1,7 +1,7 @@
 # 1단계: Gradle 빌드 이미지 설정
 FROM gradle:7.6.0-jdk17 AS build
 WORKDIR /app
-COPY .. .
+COPY . .
 RUN ./gradlew :module-common:bootJar --no-daemon
 
 # 2단계: 최종 실행 이미지 생성
