--- a/module-batch/build.gradle
+++ b/module-batch/build.gradle
@@ -12,7 +12,7 @@ dependencies {
 }
 
 tasks.named('bootJar') {
-    enabled = true // 나중에 false로 안바꾸면 대머리
+    enabled = false // 나중에 false로 안바꾸면 대머리
 }
 
 tasks.named('jar') {
