--- a/module-common/src/main/resources/application-local.yml
+++ b/module-common/src/main/resources/application-local.yml
@@ -29,6 +29,13 @@ spring:
     redis:
       host: localhost
       port: 6379
+  kafka:
+    bootstrap-servers: ${KAFKA_PORT}
+    consumer:
+      auto-offset-reset: earliest
+      properties:
+        spring.json.trusted.packages: "*"
+
 
 admin:
   token: ${ADMIN_TOKEN}
