refactor: 쿠폰사용 낙관적락 사용 버전 컨트롤 & 스케쥴러 매일 정각으로 변경

--- a/module-batch/build.gradle
+++ b/module-batch/build.gradle
@@ -12,11 +12,11 @@ dependencies {
 }
 
 tasks.named('bootJar') {
-    enabled = false // 나중에 false로 안바꾸면 대머리
+    enabled = true // 나중에 false로 안바꾸면 대머리
 }
 
 tasks.named('jar') {
-    enabled = false
+    enabled = true
 }
 
 String jarName = "module-batch.jar"
