--- a/.github/workflows/dev-Multi-Module CI-CD.yml
+++ b/.github/workflows/dev-Multi-Module CI-CD.yml
@@ -67,6 +67,20 @@ jobs:
           docker-compose -f docker-compose.batch.yml build
           docker-compose -f docker-compose.batch.yml push
 
+      - name: Deploy Batch to EC2
+        env:
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          EC2_USER: ${{ secrets.EC2_USER }}
+          EC2_KEY: ${{ secrets.EC2_KEY }}
+          BATCH_REPOSITORY_URI: ${{ secrets.BATCH_REPOSITORY_URI }}
+        run: |
+          ssh -o StrictHostKeyChecking=no -i "$EC2_KEY" "$EC2_USER@$EC2_HOST" << 'EOF'
+            docker pull $BATCH_REPOSITORY_URI:latest
+            docker stop batch-container || true
+            docker rm batch-container || true
+            docker run -d --name batch-container -p 8081:8081 $BATCH_REPOSITORY_URI:latest
+          EOF
+
         
 
   build-and-deploy-common:
@@ -102,4 +116,20 @@ jobs:
           set -e
           docker-compose -f docker-compose.common.yml build
           docker-compose -f docker-compose.common.yml push
+
+      - name: Deploy Common to EC2
+        env:
+          EC2_HOST: ${{ secrets.EC2_COMMON_HOST }}
+          EC2_USER: ${{ secrets.EC2_USER }}
+          EC2_KEY: ${{ secrets.EC2_KEY }}
+          COMMON_REPOSITORY_URI: ${{ secrets.COMMON_REPOSITORY_URI }}
+        run: |
+          ssh -o StrictHostKeyChecking=no -i "$EC2_KEY" "$EC2_USER@$EC2_HOST" << 'EOF'
+            docker pull $COMMON_REPOSITORY_URI:latest
+            docker stop common-container || true
+            docker rm common-container || true
+            docker run -d --name common-container -p 8082:8082 $COMMON_REPOSITORY_URI:latest
+          EOF
+          
+      
 
