--- a/.github/workflows/dev-Multi-Module CI-CD.yml
+++ b/.github/workflows/dev-Multi-Module CI-CD.yml
@@ -119,9 +119,9 @@ jobs:
 
       - name: Deploy Common to EC2
         env:
-          EC2_HOST: ${{ secrets.EC2_COMMON_HOST }}
+          EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
-          EC2_KEY: ${{ secrets.EC2_KEY }}
+          EC2_KEY: ${{ secrets.EC2_SSH_KEY }}
           COMMON_REPOSITORY_URI: ${{ secrets.COMMON_REPOSITORY_URI }}
         run: |
           ssh -o StrictHostKeyChecking=no -i "$EC2_KEY" "$EC2_USER@$EC2_HOST" << 'EOF'
