--- a/.github/workflows/dev-Multi-Module CI-CD.yml
+++ b/.github/workflows/dev-Multi-Module CI-CD.yml
@@ -28,10 +28,8 @@ jobs:
           filters: |
             common:
               - 'module-common/**'
-              - 'docker-compose.common.yml'
             batch:
               - 'module-batch/**'
-              - 'docker-compose.batch.yml'
 
   build-and-deploy-batch:
     needs: changes
@@ -40,16 +38,12 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+      # Gradle 빌드 추가
+      - name: Build with Gradle
+        run: ./gradlew :module-batch:build
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
-      - name: Check Docker Compose Version and Install if Needed
-        run: |
-          if ! docker-compose --version; then
-            curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | jq -r .tag_name)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-            chmod +x /usr/local/bin/docker-compose
-          fi
 
       - name: Log in to Amazon ECR
         env:
@@ -59,15 +53,28 @@ jobs:
         run: |
           aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${{ secrets.BATCH_REPOSITORY_URI }}
 
-      - name: Build and Push Batch Image
+      # Docker 이미지를 빌드하고 멀티 플랫폼으로 푸시
+      - name: Build and push multi-platform image to ECR
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./module-common/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ secrets.BATCH_REPOSITORY_URI }}:latest .
+
+      - name: Deploy Batch to EC2
         env:
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          EC2_USER: ${{ secrets.EC2_USER }}
           BATCH_REPOSITORY_URI: ${{ secrets.BATCH_REPOSITORY_URI }}
         run: |
-          set -e
-          docker-compose -f docker-compose.batch.yml build
-          docker-compose -f docker-compose.batch.yml push
-
-      
+          ssh -o StrictHostKeyChecking=no -i "/home/ubuntu/private-key.pem" -t "$EC2_USER@$EC2_HOST"
+            docker pull $BATCH_REPOSITORY_URI:latest
+            docker stop batch-container || true
+            docker rm batch-container || true
+            docker run -d --name batch-container -p 8081:8081 $BATCH_REPOSITORY_URI:latest
+          
 
   build-and-deploy-common:
     needs: changes
@@ -77,15 +84,12 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
+      # Gradle 빌드 추가
+      - name: Build with Gradle
+        run: ./gradlew :module-batch:build
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
-      - name: Check Docker Compose Version and Install if Needed
-        run: |
-          if ! docker-compose --version; then
-            curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | jq -r .tag_name)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-            chmod +x /usr/local/bin/docker-compose
-          fi
 
       - name: Log in to Amazon ECR
         env:
@@ -95,11 +99,28 @@ jobs:
         run: |
           aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin ${{ secrets.COMMON_REPOSITORY_URI }}
 
-      - name: Build and Push Common Image
+      # Docker 이미지를 빌드하고 멀티 플랫폼으로 푸시
+      - name: Build and push multi-platform image to ECR
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./module-common/Dockerfile
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ secrets.BATCH_REPOSITORY_URI }}:latest .
+
+      - name: Deploy Common to EC2
         env:
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          EC2_USER: ${{ secrets.EC2_USER }}
           COMMON_REPOSITORY_URI: ${{ secrets.COMMON_REPOSITORY_URI }}
         run: |
-          set -e
-          docker-compose -f docker-compose.common.yml build
-          docker-compose -f docker-compose.common.yml push
+          ssh -o StrictHostKeyChecking=no -i "/home/ubuntu/private-key.pem" -t "$EC2_USER@$EC2_HOST"
+            docker pull $COMMON_REPOSITORY_URI:latest
+            docker stop common-container || true
+            docker rm common-container || true
+            docker run -d --name common-container -p 8082:8082 $COMMON_REPOSITORY_URI:latest
+          
+          
+      
 
