--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: ./module-batch
       dockerfile: Dockerfile
-    image: "${ECR_REGISTRY}/module-batch:latest"
+    image: "${BATCH_REPOSITORY_URI}/module-batch:latest"
     container_name: module-batch
     ports:
       - "8081:8080"  # 외부 포트 8081을 내부 8080 포트로 매핑
@@ -19,7 +19,7 @@ services:
     build:
       context: ./module-common
       dockerfile: Dockerfile
-    image: "${ECR_REGISTRY}/module-common:latest"
+    image: "${COMMON_REPOSITORY_URI}/module-common:latest"
     container_name: module-common
     ports:
       - "8082:8080"  # 외부 포트 8082를 내부 8080 포트로 매핑
