feat: 경매기능 기초 80%

--- a/module-common/src/main/resources/application-local.yml
+++ b/module-common/src/main/resources/application-local.yml
@@ -32,7 +32,11 @@ spring:
   kafka:
     bootstrap-servers: ${KAFKA_PORT}
     consumer:
+      group-id: auction-group
       auto-offset-reset: earliest
+      enable-auto-commit: false
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: "*"
 
@@ -53,7 +57,3 @@ kakao:
 
 kakaopay:
   secret: ${KAKAOPAY_SECRET}
-
-
- 
-
