--- a/module-common/src/main/resources/application-local.yml
+++ b/module-common/src/main/resources/application-local.yml
@@ -38,7 +38,11 @@ spring:
   kafka:
     bootstrap-servers: ${KAFKA_PORT}
     consumer:
+      group-id: notification-group
       auto-offset-reset: earliest
+      enable-auto-commit: false
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: "*"
 
@@ -59,3 +63,7 @@ kakao:
 
 kakaopay:
   secret: ${KAKAOPAY_SECRET}
+
+
+ 
+
