--- a/.github/workflows/prod-Multi-Module CI-CD.yml
+++ b/.github/workflows/prod-Multi-Module CI-CD.yml
@@ -70,17 +70,22 @@ jobs:
           push: true
           tags: ${{ secrets.BATCH_REPOSITORY_URI }}
 
+      - name: Start SSH Agent and Add Key
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
+
       - name: Deploy Batch to EC2
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }} #EC2 HOST 종류 선택
           EC2_USER: ${{ secrets.EC2_USER }}
           BATCH_REPOSITORY_URI: ${{ secrets.BATCH_REPOSITORY_URI }}
         run: |
-          ssh -o StrictHostKeyChecking=no -i "/home/ubuntu/private-key.pem" -t "$EC2_USER@$EC2_HOST" << 'EOF'
-            docker pull $BATCH_REPOSITORY_URI:latest
+          ssh -o StrictHostKeyChecking=no "$EC2_USER@$EC2_HOST" << 'EOF'
+            docker pull $BATCH_REPOSITORY_URI
             docker stop batch-container || true
             docker rm batch-container || true
-            docker run -d --name batch-container -p 8081:8081 $BATCH_REPOSITORY_URI:latest
+            docker run -d --name batch-container -p 8081:8081 $BATCH_REPOSITORY_URI
           EOF
     
 
@@ -105,13 +110,6 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Check Docker Compose Version and Install if Needed
-        run: |
-          if ! docker-compose --version; then
-            curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | jq -r .tag_name)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-            chmod +x /usr/local/bin/docker-compose
-          fi
-
       - name: Log in to Amazon ECR
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -130,15 +128,20 @@ jobs:
           push: true
           tags: ${{ secrets.COMMON_REPOSITORY_URI }}
 
-      - name: Deploy Batch to EC2
+      - name: Start SSH Agent and Add Key
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
+
+      - name: Deploy Common to EC2
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }} #EC2 HOST 종류 선택
           EC2_USER: ${{ secrets.EC2_USER }}
           BATCH_REPOSITORY_URI: ${{ secrets.COMMON_REPOSITORY_URI }}
         run: |
-          ssh -o StrictHostKeyChecking=no -i "/home/ubuntu/private-key.pem" -t "$EC2_USER@$EC2_HOST" << 'EOF'
-            docker pull $BATCH_REPOSITORY_URI:latest
+          ssh -o StrictHostKeyChecking=no "$EC2_USER@$EC2_HOST" << 'EOF'
+            docker pull $BATCH_REPOSITORY_URI
             docker stop batch-container || true
             docker rm batch-container || true
-            docker run -d --name batch-container -p 8082:8082 $BATCH_REPOSITORY_URI:latest
+            docker run -d --name batch-container -p 8082:8082 $BATCH_REPOSITORY_URI
           EOF
