--- a/.github/workflows/prod-Multi-Module CI-CD.yml
+++ b/.github/workflows/prod-Multi-Module CI-CD.yml
@@ -85,7 +85,7 @@ jobs:
             docker pull $BATCH_REPOSITORY_URI
             docker stop batch-container || true
             docker rm batch-container || true
-            docker run -d --name batch-container -p 8081:8081 $BATCH_REPOSITORY_URI
+            docker run -d --name batch-container -p 8081:8081
           EOF
     
 
@@ -143,5 +143,5 @@ jobs:
             docker pull $BATCH_REPOSITORY_URI
             docker stop batch-container || true
             docker rm batch-container || true
-            docker run -d --name batch-container -p 8082:8082 $BATCH_REPOSITORY_URI
+            docker run -d --name batch-container -p 8082:8082
           EOF
